tests/expectations/compiler/const_generics/bad_types_fail.out
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but (u32, u32) was found
    --> compiler-test:1:14
     |
   1 | struct Foo::[N: (u32, u32), A: [u32; 3]] {
     |              ^^^^^^^^^^^^^
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but [u32; 3] was found
    --> compiler-test:1:29
     |
   1 | struct Foo::[N: (u32, u32), A: [u32; 3]] {
     |                             ^^^^^^^^^^^
Error [ETYC0372117]: Expected type `u32` but type `u16` was found.
    --> compiler-test:7:22
     |
   7 |         return bar::[9u16, 0u32]();
     |                      ^^^^
Error [ETYC0372117]: Expected type `scalar` but type `u32` was found.
    --> compiler-test:7:28
     |
   7 |         return bar::[9u16, 0u32]();
     |                            ^^^^
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but (u32, u32) was found
    --> compiler-test:15:10
     |
  15 | fn foo::[N: (u32, u32), A: [u32; 3]]() -> (u32, u32) {
     |          ^^^^^^^^^^^^^
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but [u32; 3] was found
    --> compiler-test:15:25
     |
  15 | fn foo::[N: (u32, u32), A: [u32; 3]]() -> (u32, u32) {
     |                         ^^^^^^^^^^^
